# schnorr-cortex

./: Cargo.toml  README.md
ed25519-dalek/: Cargo.toml
merlin/: Cargo.toml  README.md
merlin/src/: lib.rs  strobe.rs  transcript.rs
src/: cert.rs  context.rs  derive.rs  embedded.rs  errors.rs  keys.rs  lib.rs  libsr.h  onchip.rs  points.rs  scalars.rs  sign.rs  test.c  wrapper.rs
test.dSYM/Contents/Resources/DWARF/: test
