cargo-features = ["profile-overrides"] # +

[package]
name = "schnorrkel"
version = "0.5.0"
authors = ["Jeff Burdges <jeff@web3.foundation>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/w3f/schnorrkel"
documentation = "https://docs.rs/schnorrkel"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Schnorr VRF, signatures, etc. using the Ristretto group"
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[lib]
name = "sr"
path = "src/lib.rs"
crate-type = ["staticlib"]


[dependencies]
subtle = {version = "2.0.0",default-features = false}
curve25519-dalek = { version = "1.1", default-features = false, features = ["u32_backend"] }
failure = {version = "^0.1.1",default-features = false}
sha2 = {version = "^0.8" , default-features = false}
merlin = { path="./merlin"}
ed25519-dalek = {path="./ed25519-dalek"}
alloc-cortex-m = {path="./alloc-cortex-m"}
rand_core = { version = "0.3", default-features = false }



