[package]
name = "ed25519-dalek"
version = "1.0.0-pre.1"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/ed25519-dalek"
homepage = "https://dalek.rs"
documentation = "https://docs.rs/ed25519-dalek"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[badges]
travis-ci = { repository = "dalek-cryptography/ed25519-dalek", branch = "master"}


[dependencies]
keccak = { version = "0.1.0", default-features = false }
byteorder = { version = "1.2.4", default-features = false }
clear_on_drop = "0.2.3"
rand_core = { version = "0.3", default-features = false }
rand = {version = "0.6.5", default-features = false, features = ["i128_support"]}
subtle = {version = "2.0.0",default-features = false}
curve25519-dalek = { version = "1.1", default-features = false, features = ["u32_backend"] }
rand_chacha ={version = "0.1.0",default-features = false}
failure = {version = "^0.1.1",default-features = false}
sha2 = {version = "^0.8" , default-features = false}
serde = { version = "^1.0", optional = true,default-features = false}

